# chalchitra

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
chalchitra/: __init__.py
docs/: api.rst  conf.py  index.rst  install.rst  usage.rst
docs/img/: vscodepy
docs/img/vscodepy/: vscodepy
